	1308 Golden Axe:		NEED INFO.
	13160, 13161 Destroyer:	Can break target's armor when fired at close range.
	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

=========================
08/21
	* Added delay to HLIF_AVOID [Toms]
08/20
	* Fixed Fling not reducing DEF for 30 seconds [Playtester]
	* Updates Zeny givers (Red Pouch) [Lupus]
08/19
	* Removed event bonus of 4 year anniversary hat [Playtester]
	* Added HAMI_CASTLE block time [Toms]
	* Updated NJ_BAKUENRYU skill tree [Toms]
	* Updated HLIF_CHANGE skill [Toms]
	* Updated Kouenka, removed aftercast delay [Toms]
	* Fixed some Ninja weapons (1Hand Sword -> Dagger) [Toms]
08/18
	* Made HLIF_HEAL a self skill that auto-selects target to caster's master.
	  [Skotlex]
	* Fixed Kouenka not having an aftercast delay on levels greater 1 [Playtester]
08/17
	* Gospel can't stack anymore [Playtester]
08/16
	* Added WE_CALLBABY to Gunslinger and Ninja [Playtester]
	* Fixed various bullets, spheres and kunais [Playtester]
	* NJ_NEN now requires a Fang [Playtester]
08/15
	* Fixed disarm not working [Playtester]
	- also fixed duration of Gatling Fever
	* Made Kiel MVP's skills non-cancelable [Playtester]
	* Fixed Masamune and Kamaitachi using bAspd rather than bAspdRate [Playtester]
08/14
	* Updated mob stats according to official kRO website [Playtester]
	* Fixed attack power of Dusk [Playtester]
	* Added official Gunslinger ASPD values according to Ragnarok Monthly [Playtester]
08/13
	* Gave elemental -1 to some GS skills. [Vicious]
08/12
	* Destroyer now has a 1% chance on breaking armor rather than Hit-10 [Playtester]
	* Fixed Fling requiring unknown amunition [Playtester]
	* Changed the aftercast delay of Envenom to 100ms [Playtester]
	- this will cause that you can cast Envenom as fast as aMotion